tdf#164176 Import multiline document variable with break

Converts the '_x000d_' or '_x000d__x000a_' to a paragraph
break in docx import.

Change-Id: Ib8b5203338e987028279711928d3aecb9cedd836
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178731
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>