sw/qa/extras/ooxmlexport/ooxmlexport21.cxx
@@ -16,6 +16,8 @@
 #include <com/sun/star/text/RelOrientation.hpp>
 #include <com/sun/star/text/XDocumentIndex.hpp>
 #include <com/sun/star/text/XTextTable.hpp>
+#include <com/sun/star/text/XTextField.hpp>
+#include <com/sun/star/text/XTextFieldsSupplier.hpp>
 #include <com/sun/star/table/XCellRange.hpp>
 #include <com/sun/star/style/LineSpacing.hpp>
 #include <com/sun/star/style/LineSpacingMode.hpp>
@@ -888,6 +890,19 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf164065)
     uno::Reference<table::XCellRange> xTable(xTables->getByIndex(0), uno::UNO_QUERY);
     uno::Reference<text::XText> xCell(xTable->getCellByPosition(0, 0), uno::UNO_QUERY);
     CPPUNIT_ASSERT_EQUAL(u"a"_ustr, xCell->getString());
+}
+
+DECLARE_OOXMLEXPORT_TEST(testTdf164176, "tdf164176.docx")
+{
+    uno::Reference<text::XTextFieldsSupplier> xTextFieldsSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XEnumerationAccess> xFieldsAccess(
+        xTextFieldsSupplier->getTextFields());
+    uno::Reference<container::XEnumeration> xFields(xFieldsAccess->createEnumeration());
+
+    uno::Reference<text::XTextField> xEnumerationAccess1(xFields->nextElement(), uno::UNO_QUERY);
+    rtl::OUString sPresentation = xEnumerationAccess1->getPresentation(true).trim();
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(-1), sPresentation.indexOf("_x000d_"));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(-1), sPresentation.indexOf("_x000a_"));
 }
 
 } // end of anonymous namespace
